content fix for subscribe block fixed extra margin on taxonomy terms pushing to the right.

--- a/drupal/sites/default/themes/ttctheme/src/scss/modules/_faceted_search.scss
+++ b/drupal/sites/default/themes/ttctheme/src/scss/modules/_faceted_search.scss
@@ -200,7 +200,9 @@ body.page-availabletechnologies{
        ul.facet-selection{margin:20px 0px; padding:0px;}
        ul.facet-selection a{padding:.6rem .75rem;}
 
+
 }
+ul.taxonomy-terms, ul.facet-selection li{margin-left:0px;}
 
 
 
